{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 13,
  "lineage": "88107fe5-d71a-f36d-2d0c-9627562729bb",
  "resources": [
    {
      "module": "module.dev.module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:security-group/sg-07d5584dbae59f0e5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d5584dbae59f0e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30418,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30418
              }
            ],
            "name": "terraform-20240922021547753200000001",
            "name_prefix": "terraform-",
            "owner_id": "241875560804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-sg"
            },
            "tags_all": {
              "Name": "main-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ab84fadc0a80818"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:internet-gateway/igw-0ae2aecc62a87a38b",
            "id": "igw-0ae2aecc62a87a38b",
            "owner_id": "241875560804",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-03ab84fadc0a80818"
          },
          "dependencies": [
            "module.dev.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:route-table/rtb-02148a0267fd2e27d",
            "id": "rtb-02148a0267fd2e27d",
            "owner_id": "241875560804",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae2aecc62a87a38b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-route-table"
            },
            "tags_all": {
              "Name": "main-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ab84fadc0a80818"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.module.network.aws_internet_gateway.main",
            "module.dev.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5656b64e9fb2ff6",
            "route_table_id": "rtb-02148a0267fd2e27d",
            "subnet_id": "subnet-069b667b48f6ed1b5"
          },
          "dependencies": [
            "module.dev.module.network.aws_internet_gateway.main",
            "module.dev.module.network.aws_route_table.main",
            "module.dev.module.network.aws_subnet.main",
            "module.dev.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:subnet/subnet-069b667b48f6ed1b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069b667b48f6ed1b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241875560804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-subnet"
            },
            "tags_all": {
              "Name": "main-subnet"
            },
            "vpc_id": "vpc-03ab84fadc0a80818"
          },
          "dependencies": [
            "module.dev.module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:241875560804:vpc/vpc-03ab84fadc0a80818",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ac81af6c4aed3ccd",
            "default_route_table_id": "rtb-05caa06cfc30ad45c",
            "default_security_group_id": "sg-0493566f9289e85ea",
            "dhcp_options_id": "dopt-4871452f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ab84fadc0a80818",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05caa06cfc30ad45c",
            "owner_id": "241875560804",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}